--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon ./server/server",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,11 +12,22 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "auto-bind": "^4.0.0",
+    "bcrypt": "^5.1.0",
+    "debug": "^4.3.4",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.7.3",
+    "mongoose-timestamp": "^0.6.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "winston": "^3.8.2"
   }
 }
