--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "antd": "^5.0.4",
     "auto-bind": "^4.0.0",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.2.3",
     "debug": "^4.3.4",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
@@ -26,7 +28,9 @@
     "multer": "^1.4.5-lts.1",
     "next": "13.0.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.3",
     "winston": "^3.8.2"
   }
