--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.9",
     "antd": "^5.0.4",
     "auto-bind": "^4.0.0",
+    "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
     "debug": "^4.3.4",
@@ -32,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "typescript": "4.9.3",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "yup": "^0.32.11"
   }
 }
