--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "eslint-config-next": "13.0.4",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "fluent-ffmpeg": "^2.1.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.7.3",
+    "mongoose": "^6.8.3",
     "mongoose-timestamp": "^0.6.0",
     "multer": "^1.4.5-lts.1",
     "next": "13.0.4",
